--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     },
     "devDependencies": {
         "axios": "^1.6.4",
+        "daisyui": "^5.0.35",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@tailwindcss/vite": "^4.1.5",
+        "tailwindcss": "^4.1.5"
     }
 }
